--- a/styles/Footer.css
+++ b/styles/Footer.css
@@ -2,10 +2,10 @@
   background-color:##eae8e8;
   
 }
-a{
+.Footer a{
   text-decoration:none;
   color:#000000;
 }
-a ::after{
+.Footer a::after{
   content:"/";
 }
