--- a/styles/Stylesheet1.css
+++ b/styles/Stylesheet1.css
@@ -21,6 +21,6 @@
 	content:"もっと見る》";
 }
 .Headerimg{
-	background-image: url("images/onestep.jpg");
+	background-image: url("../images/onestep.jpg");
 	background-size: cover;
 }
