--- a/styles/Stylesheet1.css
+++ b/styles/Stylesheet1.css
@@ -26,11 +26,10 @@
 	background-size: cover;
 }
 .main span{
-	background-color:#aaaaaa;
+	background-color:#ffdddd;
 }
 .main h1{
-	display:flex;
-	height:500px;
 	text-align:center;
-	text-size:24px;
+	font-size:50px;
+	line-height:500px;
 }
